# instigpt-prototype

./: .env.example  README.md  main.py  notes.md  pyproject.toml  ui.py
api/: __init__.py  embedder.py  prompt.py
experiments/: with_vector_store.ipynb  with_vector_store_and_knowledge_graph.ipynb
experiments/data/: questions.json
extracted_data/: courses.json  courses.jsonl  resources_MA111.json  resources_MA111.jsonl  rulebook.json  rulebook.jsonl
extractors/: __init__.py  courses.py  resources.py  ugrulebook.py  utils.py
